// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DarkMode shows Moon icon on light mode 1`] = `
<div>
  <button
    class="m-3"
    data-testid="moon"
  >
    <svg
      class="h-8 w-8 text-gh-dark"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"
      />
    </svg>
  </button>
</div>
`;

exports[`DarkMode shows Sun icon on dark mode 1`] = `
<div>
  <button
    class="m-3"
    data-testid="sun"
  >
    <svg
      color="var(--geist-foreground)"
      fill="none"
      height="28"
      shape-rendering="geometricPrecision"
      stroke="white"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="28"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="5"
      />
      <path
        d="M12 1v2m0 18v2M4.22 4.22l1.42 1.42m12.72 12.72l1.42 1.42M1 12h2m18 0h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
      />
    </svg>
  </button>
</div>
`;
